Feat: Implement combined sorting