@@ -3,12 +3,14 @@ package com.artful.curatolist.service;
 import com.artful.curatolist.controller.exception.ResourcesNotFoundException;
 import com.artful.curatolist.model.CLArtwork;
 import com.artful.curatolist.model.CLPage;
+import com.artful.curatolist.util.SortComparator;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Mono;
 
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
@@ -16,10 +18,12 @@ public class CuratolistServiceImpl implements CuratolistService{
 
     private final ChicagoService chicagoService;
     private final HarvardService harvardService;
+    private final SortComparator sortComparator;
 
-    public CuratolistServiceImpl(ChicagoService chicagoService, HarvardService harvardService) {
+    public CuratolistServiceImpl(ChicagoService chicagoService, HarvardService harvardService, SortComparator sortComparator) {
         this.chicagoService = chicagoService;
         this.harvardService = harvardService;
+        this.sortComparator = sortComparator;
     }
 
 
@@ -50,10 +54,12 @@ public class CuratolistServiceImpl implements CuratolistService{
 
                     List<CLArtwork> combined = Stream.of(harvardArt, chicagoArt)
                             .flatMap(Collection::stream)
-                            .toList();
+                            .collect(Collectors.toList());
                     if (combined.isEmpty()) {
                         throw new ResourcesNotFoundException("No Results Available");
                     }
+
+                    combined.sort(sortComparator.getComparator(sortTerm));
                     CLPage.PageInfo pageInfo = new CLPage.PageInfo(
                             chicago.pageInfo().chicagoTotal(),
                             chicago.pageInfo().chicagoPageTotal(),
